// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add the class name 1`] = `
<DocumentFragment>
  <div
    class="kroket-l1kf3y"
  />
</DocumentFragment>
`;

exports[`should append the defined classname 1`] = `
<DocumentFragment>
  <div
    class="kroket-45h test"
  />
</DocumentFragment>
`;

exports[`should call variable functions 1`] = `
<DocumentFragment>
  <div
    class="kroket-l1kf3y"
  />
</DocumentFragment>
`;

exports[`should forward props 1`] = `
<DocumentFragment>
  <div
    class="kroket-45h"
    id="test"
  >
    test
  </div>
</DocumentFragment>
`;

exports[`should replace dynamic variables with colors 1`] = `
<DocumentFragment>
  <div
    class="kroket-1uk7d0"
  />
</DocumentFragment>
`;
